Commiting to go to the next Tutorial -> Debugging React Apps

--- a/react-complete-guide/src/Person/index.css
+++ b/react-complete-guide/src/Person/index.css
@@ -11,8 +11,8 @@
     border-radius: 2px;
 }
 
-/* @media(min-width: 500px){
+@media(min-width: 500px){
     .Person {
         width: 450px;
     }
-} */
+}
