--- a/single-page-routing/src/containers/Blog/Blog.css
+++ b/single-page-routing/src/containers/Blog/Blog.css
@@ -15,10 +15,11 @@
 
 .Blog a {
   text-decoration: none;
-  color: white;
+  color: black;
 }
 
 .Blog a:hover,
-.Blog a:active {
+.Blog a:active,
+.Blog a.active {
   color: #fa923f;
 }
